# rugix-tests

./: .gitignore  LICENSE-MIT  README.md  conftest.py  generate-test-keys.sh  mise.toml  pyproject.toml  rugix-bakery.toml  run-apps-tests.sh  run-bakery  run-tests-deb.sh  run-update-tests.sh
apps/binary-hello/: hello-server  (+1 more)
harness/: __init__.py  bakery.py  vm.py
layers/: customized-efi-deb-gnu.toml  customized-efi-deb.toml  customized-efi-docker.toml  customized-efi.toml  customized-luks2-passphrase.toml  customized-luks2-tpm2.toml  customized-overlay-fallback.toml  customized.toml  init-error-shell-disabled.toml  init-error-shell-enabled.toml  old-debian-snapshot.toml
scripts/: run-pytest.sh
tests/: test-apps-binary.toml  test-apps-docker-compose.toml  test-apps-generic.toml  test-system-state-reset-backup.toml  test-system-state.toml  test-update-bundle-deb-gnu.toml  test-update-bundle-deb.toml  test-update-bundle-signed.toml  test-update-bundle.toml  test-update-custom-slots.toml  test-update-index-http.toml  test-update-index-multi.toml  test-update-index.toml  test-update-script.toml  test-update-static-delta.toml  test_apps_binary.py  test_apps_docker_compose.py  test_apps_generic.py  test_data_encryption.py  test_data_encryption_tpm.py  test_init_error_shell.py  test_overlay_fallback.py  test_system_state.py  test_system_state_reset_backup.py  test_update_bundle.py  test_update_bundle_deb.py  test_update_bundle_signed.py  test_update_custom_slots.py  test_update_index.py  test_update_index_http.py  test_update_script.py  test_update_static_delta.py
(+31 files in other folders)
