[project]
name = "rugix-tests"
version = "0.0.0"
description = "End-to-end tests for Rugix, building bundles in the bakery container and running QEMU on the host."
requires-python = ">=3.11"
dependencies = [
    "rugix-testkit @ git+https://github.com/rugix/rugix-testkit.git",
    "fabric>=3.0",
    "paramiko>=3.0",
]

[dependency-groups]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["fabric.*", "paramiko.*"]
ignore_missing_imports = true

# Test bodies traverse JSON output from rugix-ctrl with chained subscripts —
# strict typing of JsonValue makes those expressions a wall of casts. Keep
# the harness strictly typed and let test files breathe a little.
[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["call-overload", "index", "no-any-return", "union-attr"]

[tool.ruff]
target-version = "py311"
